<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/tagEditToggleSwitch"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/sorting_mode"
        app:showAsAction="ifRoom" />
</menu>