
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_tag_remove"
        android:icon="@drawable/ic_remove"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom" />
</menu>