
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_remove"
        android:title="@string/action_remove"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_protect"
        android:icon="@drawable/ic_lock_outline_black_24dp"
        android:title="@string/action_protect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_protect_disabled"
        android:icon="@drawable/ic_lock_outline_black_opacity_down_24dp"
        android:title="@string/action_protect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unprotect"
        android:icon="@drawable/ic_lock_open_black_24dp"
        android:title="@string/action_unprotect"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_pinning"
        android:icon="@drawable/ic_pinning"
        android:title="@string/action_pinning"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_unpinning"
        android:icon="@drawable/ic_not_pinning"
        android:title="@string/action_unpinning"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:icon="?attr/actionModeShareDrawable"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_restore"
        android:icon="@drawable/ic_restore_black_24dp"
        android:title="@string/action_restore"
        app:showAsAction="ifRoom" />

</menu>